--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,8 @@
 
         const sim = new FluidSim(canvas, { simScale: 1.5, pressureIters: 30 });
         window.addEventListener("resize", () => sim.resize());
+
+        sim.addObstacle('circle', 0.5, 0.5, { radius: 0.08 });
     </script>
 </body>
 
